@@ -1,3 +1,9 @@
+2007-03-18  Edward Hervey  <edward@fluendo.com>
+
+	* pitivi/pitivi.py:
+	* pitivi/pitivigstutils.py:
+	Import pitivi gst utils explicitely.
+
 2007-03-18  Johan Dahlin  <jdahlin@async.com.br>
 
 	* pitivi/ui/sourcefactories.py: Modernize the usage of
